<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cpu_test_title"
        android:textAlignment="center"
        android:textSize="35sp"/>

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cputemplabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_tem"
            android:textColor="@color/brown"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_cpuTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="76dp"
            android:text="cpuTem"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/lin1"
        >

        <TextView
            android:id="@+id/cpuMinFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_minfrq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_minFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:text="Minfreq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/lin1"
        >

        <TextView
            android:id="@+id/cpuMaxFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_maxfrq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_maxFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:text="Maxfreq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/lin1"
        >
        <TextView
            android:id="@+id/cpuNowFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_nowfrq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_nowFreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:text="NowFreq"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignStart="@id/lin1"
        >
        <TextView
            android:id="@+id/tv_cpusagelable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_usage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_cpusage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:text="usage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/lin1"
        android:layout_below="@id/lin5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_minUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_minusage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/cpu_Minusage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:text="MinUsage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/lin1"
        android:layout_below="@id/lin6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_maxUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_maxusage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/cpu_Maxusage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="MaxUsage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/lin1"
        android:layout_below="@id/lin7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_Avgusage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_avgusage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/cpu_Avgusage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:text="NowUsage"
            android:textColor="@color/brown"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>


